# AzuracastPy

./: .gitignore  .readthedocs.yml  README.rst  pyproject.toml  requirements.txt
AzuracastPy/: __init__.py  azuracast_client.py  constants.py  endpoints.py  enums.py  exceptions.py  request_handler.py
AzuracastPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
AzuracastPy/models/: __init__.py  helpers.py  hls_stream.py  links.py  listener.py  listeners.py  mount.py  mount_point.py  now_playing.py  playlist.py  podcast.py  podcast_episode.py  queue_item.py  remote.py  remote_relay.py  requestable_song.py  schedule_item.py  schedule_time.py  sftp_user.py  song.py  song_history.py  station.py  station_file.py  station_status.py  streamer.py  webhook.py
AzuracastPy/models/admin/: __init__.py  admin.py  admin_station.py
AzuracastPy/models/administration/: __init__.py  admin.py  admin_station.py  custom_field.py  helpers.py  permissions.py  relay.py  role.py  settings.py  storage_location.py
AzuracastPy/models/util/: station_resource_operations.py
AzuracastPy/util/: file_upload_util.py  general_util.py  media_util.py  request_util.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/azuracastpy_models/: azuracastpy_client.rst  (+3 more)
tests/: test_admin.py  test_azuracast_client.py  test_hls_stream.py  test_mount_point.py  test_playlist.py  test_podcast.py  test_podcast_episode.py  test_remote_relay.py  test_request_handler.py  test_sftp_user.py  test_station.py  test_streamer.py  test_webhook.py
tests/util/: fake_data_generator.py
(+136 files in other folders)
